Bugs tests on ios

--- a/css/parallax.css
+++ b/css/parallax.css
@@ -77,7 +77,6 @@
 .headers h1 {
     font-size: 7rem;
     color: var(--orange);
-    -webkit-text-fill-color: var(--orange);
 }
 
 .headers h2 {
@@ -128,6 +127,8 @@
     font-size: 7rem;
     color: var(--orange);
     -webkit-text-fill-color: var(--orange);
+    -webkit-text-size-adjust: 100%;
+    -moz-text-size-adjust: 100%;
 }
 
 
